# ak2-lab2

./: CMakeLists.txt  Makefile  README.md  calculator_app
include/: calculator.h
src/: calculator.cpp  main.cpp
